--- a/58/index.html
+++ b/58/index.html
@@ -77,7 +77,7 @@
 		</div>
 	</div>
 	<div id="headWarp">
-		<div id="homeWarp">
+		<div id="homeWarp"style="padding-top: 0px;">
 			<div class="header">
 				<div class="head_search">
 					<a href="http://www.58.com" id="logo" traget="_self">
@@ -148,10 +148,186 @@
 					</a>
 				</li>
 				<li class="navG"></li>
+				<li class="navG navGary" id="navG">
+					<a href="#" class="whitenav">
+						个人简历
+					</a>
+				</li>
+				<li class="navG"></li>
+				<li class="navG navGary" id="navG">
+					<a href="#" class="whitenav">
+						求职意向
+					</a>
+				</li>
+				<li class="navG navGary" id="navG">
+					<a href="#" class="whitenav">
+						公司简介
+					</a>
+				</li>
+				<li class="navMini">
+					<a href="">
+						产品推广
+					</a>
+				</li>
 			</ul>
 		</div>
 	</div>
-	<div id="main">
+	<div id="main_part">
+		<div class="main_warp">
+			<div class="left_side">
+				<ul class="iconNav">
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -400px no-repeat;"></i>
+							交易
+						</a>
+						<em>
+							<a href="#">现金</a>
+							<span>/</span>
+							<a href="#">同城</a>
+							<span>/</span>
+							<a href="#">第三方</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -224px no-repeat;"></i>
+							工作
+						</a>
+						<em>
+							<a href="#">租房</a>
+							<span>/</span>
+							<a href="#">二手房</a>
+							<span>/</span>
+							<a href="#">中介</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -280px no-repeat;"></i>
+							汽车
+						</a>
+						<em>
+							<a href="#">进口车</a>
+							<span>/</span>
+							<a href="#">4S店</a>
+							<span>/</span>
+							<a href="#">二手车</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 3px no-repeat;"></i>
+							生活用品
+						</a>
+						<em>
+							<a href="#">购物</a>
+							<span>/</span>
+							<a href="#">淘宝</a>
+							<span>/</span>
+							<a href="#">闲置</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -335px no-repeat;"></i>
+							宠物
+						</a>
+						<em>
+							<a href="#">狗狗</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -50px no-repeat;"></i>
+							情感
+						</a>
+						<em>
+							<a href="#">交友</a>
+							<span>/</span>
+							<a href="#">婚介</a>
+							<span>/</span>
+							<a href="#">相亲</a>
+						</em>
+					</li>
+					<li>
+						<a href="" class="icon">
+							<i style="background: url(http://img.58cdn.com.cn/ui6/index/NavIcon.png?v=16)0 -108px no-repeat;"></i>
+							人脉
+						</a>
+						<em>
+							<a href="#">求职</a>
+							<span>/</span>
+							<a href="#">招聘</a>
+						</em>
+					</li>
+				</ul>
+			</div>
+			<div class="right_side">
+				<div class="right_Top">
+					<div class="fuwudaojia58">
+						<div class="daojia_title">
+							<a href="#">
+								58到家服务
+							</a>
+							<img src="" alt="">
+							<ul class="swipDot">
+								<li class="active"></li>
+								<li></li>
+							</ul>
+						</div>
+						<ul class="daojia_item">
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -205px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -265px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -322px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -382px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -438px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -265px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+							<li>
+								<a href="">
+									<i style="background: url(../58/img/DaojiaNavIcon.png) 10px -265px no-repeat;"></i>
+									保姆
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="swipeBtn">
+						<div class="lBtn" id="slbtn"></div>
+						<div class="rBtn" id="srbtn"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div id="footer">
 	</div>
@@ -184,6 +360,7 @@
 		var e = $(this);
 		e.removeClass("hover");
 	});
+
 	$(".navG").hover(function(){
 		var e = $(this);
 		e.addClass("ghover");
@@ -193,4 +370,68 @@
 		e.removeClass("ghover");
 	});
 
+	$(".right_Top").hover(function(){
+		var e = $(".swipeBtn");
+		e.css("display","block");
+	},
+	function(){
+		var e = $(".swipeBtn");
+		e.css("display","none");
+	});
+
+	$(".rBtn").hover(function(){
+		var e = $(this);
+		e.addClass("shover");
+	},
+	function(){
+		var e = $(this);
+		e.removeClass("shover");
+	});
+
+	$(".lBtn").hover(function(){
+		var e = $(this);
+		e.addClass("shover");
+	},
+	function(){
+		var e = $(this);
+		e.removeClass("shover");
+	});
+	//平移动画
+	$("#srbtn").click(function(){
+		var e = $(".daojia_item");
+		var b = $(".fuwudaojia58");
+		if(b.offset().left-e.offset().left == 0){
+			e.animate({left:'-180px'});
+			$(".swipDot>li:eq(0)").removeClass("active");
+			$(".swipDot>li:eq(1)").addClass("active");
+		}
+	});
+	$("#slbtn").click(function(){
+		var e = $(".daojia_item");
+		var b = $(".fuwudaojia58");
+		if(b.offset().left-e.offset().left == 180){
+			e.animate({left:'0px'});
+			$(".swipDot>li:eq(1)").removeClass("active");
+			$(".swipDot>li:eq(0)").addClass("active");
+		}
+	});
+	//红点动画
+	$(".swipDot>li:eq(0)").click(function(){
+		var e = $(this);
+		var f = $(".daojia_item");
+		if(e.attr("class") != "active"){
+			e.addClass("active");
+			e.next().removeClass("active");
+			f.animate({left:'0px'});
+		}
+	})
+	$(".swipDot>li:eq(1)").click(function(){
+		var e = $(this);
+		var f = $(".daojia_item");
+		if(e.attr("class") != "active"){
+			e.addClass("active");
+			e.prev().removeClass("active");
+			f.animate({left:'-180px'});
+		}
+	})
 </script>
